<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="1000dp">

            <TextView
                android:id="@+id/textView"
                style="@style/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/pertanyaan"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/pertanyaan1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <CheckBox
                android:id="@+id/checkboxNuker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_nuker"
                app:layout_constraintBottom_toBottomOf="@+id/checkboxNuker"
                app:layout_constraintStart_toEndOf="@+id/checkboxNuker"
                app:layout_constraintTop_toTopOf="@+id/checkboxNuker" />

            <CheckBox
                android:id="@+id/checkboxCarry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkboxNuker" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carry"
                app:layout_constraintBottom_toBottomOf="@+id/checkboxCarry"
                app:layout_constraintStart_toEndOf="@+id/checkboxCarry"
                app:layout_constraintTop_toTopOf="@+id/checkboxCarry" />

            <CheckBox
                android:id="@+id/checkboxDurable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkboxCarry" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Durable"
                app:layout_constraintBottom_toBottomOf="@+id/checkboxDurable"
                app:layout_constraintStart_toEndOf="@+id/checkboxDurable"
                app:layout_constraintTop_toTopOf="@+id/checkboxDurable" />

            <CheckBox
                android:id="@+id/checkboxSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkboxDurable" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Support"
                app:layout_constraintBottom_toBottomOf="@+id/checkboxSupport"
                app:layout_constraintStart_toEndOf="@+id/checkboxSupport"
                app:layout_constraintTop_toTopOf="@+id/checkboxSupport" />

            <TextView
                android:id="@+id/textView7"
                style="@style/questionTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkboxSupport" />

            <TextView
                android:id="@+id/textView8"
                style="@style/pertanyaan"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/pertanyaan2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <RadioButton
                android:id="@+id/radioKotl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Keeper of the Light"
                app:layout_constraintBottom_toBottomOf="@+id/radioKotl"
                app:layout_constraintStart_toEndOf="@+id/radioKotl"
                app:layout_constraintTop_toTopOf="@+id/radioKotl" />

            <RadioButton
                android:id="@+id/radioDoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioKotl" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Doom"
                app:layout_constraintBottom_toBottomOf="@+id/radioDoom"
                app:layout_constraintStart_toEndOf="@+id/radioDoom"
                app:layout_constraintTop_toTopOf="@+id/radioDoom" />

            <RadioButton
                android:id="@+id/radioZeus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioDoom" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zeus"
                app:layout_constraintBottom_toBottomOf="@+id/radioZeus"
                app:layout_constraintStart_toEndOf="@+id/radioZeus"
                app:layout_constraintTop_toTopOf="@+id/radioZeus" />

            <RadioButton
                android:id="@+id/radioLs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioZeus" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lifestealer"
                app:layout_constraintBottom_toBottomOf="@+id/radioLs"
                app:layout_constraintStart_toEndOf="@+id/radioLs"
                app:layout_constraintTop_toTopOf="@+id/radioLs" />



            <TextView
                android:id="@+id/textView13"
                style="@style/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioLs" />

            <TextView
                android:id="@+id/textView14"
                style="@style/pertanyaan"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/pertanyaan3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <EditText
                android:id="@+id/answerViperAtribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ask the dota player :p"
                android:inputType="text"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView15"
                style="@style/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answerViperAtribute" />

            <TextView
                android:id="@+id/textView17"
                style="@style/pertanyaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pertanyaan4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <RadioButton
                android:id="@+id/radioDyingToNeutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dying to neutrals"
                app:layout_constraintBottom_toBottomOf="@+id/radioDyingToNeutral"
                app:layout_constraintStart_toEndOf="@+id/radioDyingToNeutral"
                app:layout_constraintTop_toTopOf="@+id/radioDyingToNeutral" />

            <RadioButton
                android:id="@+id/radioSuicide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/textView18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioDyingToNeutral" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:text="Suicide"
                app:layout_constraintBottom_toBottomOf="@+id/radioSuicide"
                app:layout_constraintStart_toEndOf="@+id/radioSuicide"
                app:layout_constraintTop_toTopOf="@+id/radioSuicide" />

            <RadioButton
                android:id="@+id/radioDyingToRoshan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/textView19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioSuicide" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dying to roshan"
                app:layout_constraintBottom_toBottomOf="@+id/radioDyingToRoshan"
                app:layout_constraintStart_toEndOf="@+id/radioDyingToRoshan"
                app:layout_constraintTop_toTopOf="@+id/radioDyingToRoshan" />

            <RadioButton
                android:id="@+id/radioDyingToTower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/textView20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioDyingToRoshan" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dying to tower"
                app:layout_constraintBottom_toBottomOf="@+id/radioDyingToTower"
                app:layout_constraintStart_toEndOf="@+id/radioDyingToTower"
                app:layout_constraintTop_toTopOf="@+id/radioDyingToTower" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="148dp"
                android:layout_marginLeft="148dp"
                android:layout_marginRight="148dp"
                android:layout_marginStart="148dp"
                android:layout_marginTop="8dp"
                android:text="submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioDyingToTower" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</RelativeLayout>